test/parser-iec-61131-3-3/grammar.js
        source_file : $ => repeat(
            choice(
                $.config_decl, // Declaration of CONFIGURATION and RESOURCE
                $.prog_decl, // Declaration of PROGRAM
                $.namespace_decl, // Declaration of NAMESPACE (including all other declarations)

                // To ensure inter-operability with rev 2, we also add all declarations without namespace
                $.fb_decl, // Declaration of FUNCTION_BLOCK
                $.func_decl, // Declaration of FUNCTION
                $.enum_type_decl, // Declaration of ENUM
                $.data_type_decl, // Declaration of TYPE
            )
        ),

        // Table 3 - Comments 

        constant: $ => choice(
            $.numeric_literal,
            $.char_literal,
            $.time_literal,
            $.bit_str_literal,
            $.bool_literal
        ),

        bool_literal: $ => seq(
            optional(seq($.bool_type_name, '#')),
            token(choice('0', '1', 'TRUE', 'FALSE'))
        ),

        // Table 6 - Character String literals
        // Table 7 - Two-character combinations in character strings

        int_type_name: $ => choice(
            $.sign_int_type_name,
            $.unsign_int_type_name
        ),

        sign_int_type_name: $ => choice(
            'SINT',
            'INT',
            'DINT',
            'LINT'
        ),

        subrange_type_name: $ => $.identifier,

        data_type_decl: $ => seq(
            'TYPE',
            repeat1(seq($.type_decl, ';')),
            'END_TYPE'
        ),

        type_decl: $ => choice(
            $.simple_type_decl,
            $.subrange_type_decl,
            $.enum_type_decl,
            $.array_type_decl,
            $.struct_type_decl,
            $.str_type_decl,
            $.ref_type_decl
        ),

        subrange_type_decl: $ => seq(
            $.subrange_type_name,
            ':',
            $.subrange_spec_init
        ),

        subrange_spec_init: $ => seq(
            $.subrange_spec,
            optional(seq(':=', $.signed_int))
        ),

        subrange_spec: $ => choice(
            seq($.int_type_name, '(', $.subrange, ')'),
            $.subrange_type_access
        ),

        subrange: $ => seq(
            $.constant_expr,
            '..',
            $.constant_expr
        ),

        enum_value: $ => seq(
            optional(seq($.enum_type_name, '#')),
            $.identifier
        ),

        expression: $ => seq(
            $.xor_expr,
            repeat(seq('OR', $.xor_expr))
        ),

        constant_expr: $ => $.expression,
        //todo: a constant expression must evaluate to a constant value at compile time 

        xor_expr: $ => seq(
            $.and_expr,
            repeat(seq('XOR', $.and_expr))
        ),

        and_expr: $ => seq(
            $.compare_expr,
            repeat(seq(choice('&', 'AND'), $.compare_expr))
        ),

        compare_expr: $ => seq(
            $.equ_expr,
            repeat(seq(choice('=', '<>'), $.equ_expr))
        ),

        equ_expr: $ => seq(
            $.add_expr,
            repeat(seq(choice('<', '>', '<=', '>='), $.add_expr))
        ),

        add_expr: $ => seq(
            $.term,
            repeat(seq(choice('+', '-'), $.term))
        ),

        term: $ => seq(
            $.power_expr,
            repeat(seq(choice('*', '/', seq('MOD', $.power_expr))))
        ),

        power_expr: $ => seq(
            $.unary_expr,
            repeat(seq('**', $.unary_expr))
        ),

        unary_expr: $ => seq(
            optional(choice('-', '+', 'NOT')),
            $.primary_expr
        ),

        primary_expr: $ => choice(
            $.constant,
            $.enum_value,
            $.variable_access,
            $.func_call,
            $.ref_value,
            seq('(', $.expression, ')')
        ),

        identifier: $ =>  /[0-9a-zA-Z_]+/,
    }
})
