test/parser-iec-61131-3-3/test/corpus/type_declaration/single_element_type/type_subrange.txt
==================
Subrange declaration
==================

TYPE
    Current : INT( 0..45 );
END_TYPE

---

    (source_file
      (EOL)
      (data_type_decl
        (EOL)
        (type_decl
          (subrange_type_decl
            (subrange_type_name
              (identifier))
            (subrange_spec_init
              (subrange_spec
                (int_type_name
                  (sign_int_type_name))
                (subrange
                  (constant_expr
                    (expression
                      (xor_expr
                        (and_expr
                          (compare_expr
                            (equ_expr
                              (add_expr
                                (term
                                  (power_expr
                                    (unary_expr
                                      (primary_expr
                                        (constant
                                          (bool_literal)))))))))))))
                  (constant_expr
                    (expression
                      (xor_expr
                        (and_expr
                          (compare_expr
                            (equ_expr
                              (add_expr
                                (term
                                  (power_expr
                                    (unary_expr
                                      (primary_expr
                                        (enum_value
                                          (identifier))))))))))))))))))
        (EOL))
      (EOL))
